--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "async-handler": "^0.0.3",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.10.10",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
